--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mongodb": "^6.2.0",
     "next": "13.5.6",
+    "next-auth": "^4.21.1",
     "react": "^18",
     "react-dom": "^18"
   }
