--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "mongodb": "^6.2.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "mongodb": "^4.17.1",
     "next": "13.5.6",
     "next-auth": "^4.21.1",
     "react": "^18",
